--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'org.flywaydb.flyway' version '7.1.1'
 }
 
 group = 'me'
@@ -35,4 +36,10 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+flyway{
+    url = 'jdbc:mariadb://localhost:3306/delivery?characterEncoding=utf8&character_set_server=utf8mb4&useSSL=false&serverTimezone=Asia/Seoul'
+    user = 'root'
+    password = 'root'
 }
