--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
 
+logging:
+  level:
+    org.hibernate.SQL: debug
