--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,26 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
+    url: 'jdbc:mariadb://localhost:3306/delivery?characterEncoding=utf8&character_set_server=utf8mb4&useSSL=false&serverTimezone=Asia/Seoul'
+    user: 'root'
+    password: 'root'
 
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true
     properties:
       hibernate.format_sql: true
 
 logging:
   level:
     org.hibernate.SQL: debug
+    org.hibernate.type: trace
+    main.java.me.delivery: debug
+
+server.port: 9080
+flyway:
+  enabled: true
+  encoding: 'UTF-8'
+  user: 'root'
+  password: 'root'
+  url: 'jdbc:mariadb://localhost:3306/delivery?characterEncoding=utf8&character_set_server=utf8mb4&useSSL=false&serverTimezone=Asia/Seoul'
